# numerical_qkd

./: LICENSE.txt  README.md  requirements.txt  setup.cfg  setup.py
examples/: BB84_protocol.ipynb  simple_BB84_example.ipynb  simple_BB84_example_with_matlab.ipynb
numerical_qkd/: __init__.py  basis_info.py  concentration_ineq.py  constraints.py  keyrate.py  kraus.py  rel_entropy_keyrate.py  rel_entropy_keyrate_post.py  rel_min_entropy_keyrate.py  rel_min_entropy_keyrate_post.py  utils.py
numerical_qkd/matlab_lib/: ent_postselected_rel_entropy_keyrate.m  pm_postselected_rel_entropy_keyrate.m  postselected_rel_min_entropy_keyrate.m  rel_entropy_keyrate.m
