[metadata]
author = Darius Bunandar
author_email = dariusb@mit.edu
url = https://github.mit.edu/dariusb/numerical_qkd
name = numerical_qkd
version = 0.1
license = MIT License
license_file = LICENSE.txt

# Python Software Foundation classifications:
# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Physics

# Build a platform agnostic wheel if this package is distributed
[bdist_wheel]
universal=1

[options]
packages = numerical_qkd
# Main package dependencies
install_requires =
    numpy
    scipy
    cvxpy
    cvxopt
    matlab
# Dependencies required for running tests and scripts
tests_require =
    tqdm
    ipywidgets
    matplotlib

# Optional dependencies just for development
[options.extras_require]
dev = pytest
